--- a/style.css
+++ b/style.css
@@ -1,9 +1,39 @@
 #controlPanel {
-    padding: 10px;
+    padding: 7px;
     border: 1px solid #ccc;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 #controlPanel input[type="number"] {
-    width: 60px;
-    margin-right: 10px;
+    width: 40px;
+    margin-right: 2px;
+}
+
+#restartGame {
+    /* no border, light red button, round edge, top and bottom padding, bold font */
+    border: none;
+    background-color: #ffcccc;
+    color: black;
+    border-radius: 5px;
+    padding: 5px 10px;
+    font-weight: bold;
+}
+
+.infoButtons {
+    /* no border, light blue button, round edge, top and bottom padding, bold font */
+    border: none;
+    background-color: #cceeff;
+    color: black;
+    border-radius: 5px;
+    padding: 5px 10px;
+    font-weight: bold;
+}
+
+.utilityButtons {
+    /* no border, light green button, round edge, top and bottom padding, bold font */
+    border: none;
+    background-color: #ccffcc;
+    color: black;
+    border-radius: 5px;
+    padding: 5px 10px;
+    font-weight: bold;
 }
