prevent tapping highlight on canvas that interferes with spawning mechanism

--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+canvas {
+    -webkit-tap-highlight-color: transparent; /* Prevent tap highlight color on mobile */
+    -webkit-user-select: none; /* Prevent user selection in WebKit browsers */
+    -moz-user-select: none; /* Prevent user selection in Firefox */
+    -ms-user-select: none; /* Prevent user selection in IE 10+ */
+    user-select: none; /* Standard syntax to prevent user selection */
+}
+
 #controlPanel {
     padding: 7px;
     border: 1px solid #ccc;
